# DiskSpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_exe.ps1  diskspy.spec  install.ps1  pyproject.toml  update.json
.github/workflows/: release.yml
docs/: CLI.md  INSTALL.md
src/diskspy/: __main__.py  cli.py  docs.py  elevate.py  render.py  scanner.py  shortcuts.py  tui.py  update.py
